--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^3.0.3",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-vue-devtools": "^7.0.14",
     "vue-tsc": "^1.8.27",
     "zod": "^3.22.4"
   }
